[gd_scene load_steps=8 format=2]

[ext_resource path="res://chapters/01_hadoscaphe/01_hadoscaphe.gd" type="Script" id=1]
[ext_resource path="res://chapters/01_hadoscaphe/common_resources/space_gloom.ogg" type="AudioStream" id=2]
[ext_resource path="res://chapters/01_hadoscaphe/common_resources/space_hum.ogg" type="AudioStream" id=3]
[ext_resource path="res://chapters/01_hadoscaphe/common_resources/music_airprelude.ogg" type="AudioStream" id=4]
[ext_resource path="res://chapters/01_hadoscaphe/common_resources/engines_start.wav" type="AudioStream" id=5]
[ext_resource path="res://ui/UI.tscn" type="PackedScene" id=6]









[sub_resource type="Environment" id=1]
background_mode = 4
adjustment_enabled = true

[node name="01_hadoscaphe" type="WorldEnvironment"]
environment = SubResource( 1 )
script = ExtResource( 1 )

[node name="ChapterRes" type="Node" parent="."]

[node name="Atmo" type="Node" parent="ChapterRes"]
pause_mode = 2

[node name="SpaceGloom" type="AudioStreamPlayer" parent="ChapterRes/Atmo"]
stream = ExtResource( 2 )
volume_db = -18.0
bus = "Atmo"

[node name="SpaceHum" type="AudioStreamPlayer" parent="ChapterRes/Atmo"]
stream = ExtResource( 3 )
volume_db = -6.0
bus = "Atmo"

[node name="EngineStart" type="AudioStreamPlayer" parent="ChapterRes/Atmo"]
stream = ExtResource( 5 )
bus = "Atmo"

[node name="Music" type="Node" parent="ChapterRes"]
pause_mode = 2

[node name="AirPrelude" type="AudioStreamPlayer" parent="ChapterRes/Music"]
stream = ExtResource( 4 )
volume_db = -6.0
bus = "Music"

[node name="UI" parent="." instance=ExtResource( 6 )]
